tdf#152492 sw: fix unwanted spell checking of parts of URLs

In new documents, spell checking started to report
spelling mistakes within the recognized URLs.

Regression from commit 2cca160f8bfc4597cf0ad3aaaf0017a5210ea0ec
"tdf#126657, tdf#145104: Don’t set language to none on defined
styles".

Note: skipping spell checking of recognized URLs was specified by
http://specs.openoffice.org/appwide/linguistic/Spellcheckdialog.sxw,
see also https://bz.apache.org/ooo/show_bug.cgi?id=40133.
Unfortunately, the original implementation caused possible
regressions in text layout, so it was reverted in the
previous commit.

Change-Id: Ic5f84c8ec195677640a8870f2c484f3b6ef8b9db
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143946
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit ec8fdffec29de7c80da0c2a440e467c35a297119)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144069
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>